crates/snapshot-tests/tests/snapshots/parser__bad_keys__multi_line.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[MultilineStringKey]: multiline strings are not allowed for key
  ┌─ multi_line:1:1
  │
1 │ ''''''=3
  │ ^^^^^^ multiline keys are not allowed


error: multiline strings are not allowed for key
 --> multi_line:1:1
  |
1 | ''''''=3
  | ^^^^^^ multiline keys are not allowed
Error {
    kind: "MultilineStringKey",
    message: "multiline strings are not allowed for key",
    span: 0..6,
    path: None,
}
