crates/snapshot-tests/tests/snapshots/parser__bad_keys__newline_after_equal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Unexpected]: unexpected character found: `\n` at `key`
  ┌─ newline_after_equal:1:5
  │  
1 │   key=
  │ ╭────^
2 │ │ 3
  │ ╰^ unexpected character '\n'
